pulsante torna su

--- a/iFioriDiTania/src/main/resources/templates/PaginaAggiungiRecensione.html
+++ b/iFioriDiTania/src/main/resources/templates/PaginaAggiungiRecensione.html
@@ -31,5 +31,6 @@
         </div>
         <button type="submit">Aggiungi</button>
     </form>
+    <div th:replace="fragments/backToTop :: backToTop"></div>
 </body>
 </html>
