--- a/iFioriDiTania/src/main/resources/templates/index.html
+++ b/iFioriDiTania/src/main/resources/templates/index.html
@@ -174,9 +174,9 @@
             </div>
         </div>
     </div>
-
+	<div th:replace="fragments/backToTop :: backToTop"></div>
     <div th:replace="~{fragments/footernav :: footernav}"></div>
-
+ 	
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
