--- a/iFioriDiTania/src/main/resources/static/css/styles.css
+++ b/iFioriDiTania/src/main/resources/static/css/styles.css
@@ -185,7 +185,7 @@ span{
     border: none;
 }
 .hero-login {
-	background-image: url("/images/BG_2.jpg");
+	background-color: #f8f9fa;
 	height: 100vh;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -532,28 +532,30 @@ margin-bottom: 20px;
 
 /* Stile generale per il footer */
 footer.footernav {
-    
-    bottom: 0;
-    
+    position:absolute;
+    bottom: auto;
+    width:100%;
     height: 33vh;
     background-color: #f8f9fa; /* Puoi cambiare il colore di sfondo come preferisci */
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 50px;
+    
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Stile per il box contenente il logo e i link */
 footer.footernav .box {
     display: flex;
-    justify-content: space-between;
+    width:80%;
+    justify-content: center;
     width: 100%;
 }
 
 /* Stile per il logo */
 footer.footernav .logo img {
     max-height: 90%; /* Assicura che il logo si adatti all'altezza del footer */
+    margin-right:10px; 
 }
 
 /* Stile per la sezione di interazione */
@@ -658,6 +660,58 @@ footer.footernav .interaction h5 {
 }
 
 
+.contenitore-hero{
+	/* Hero section styles */
 
+    background-color: #f8f9fa;
+    height: 80vh;
+    
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: center;
+    
+    margin-top: 0; /* Ensure there's no margin at the top */
+    padding-top: 120px; /* Adjust this value based on the height of your header to avoid content being hidden */
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
+}
 
+/* Stili per il tasto "Torna Su" */
+.torna-su {
+position: fixed;
+bottom: 20px;
+right: 20px;
+display: none;
+}
 
+.torna-su a {
+text-decoration: none;
+padding: 10px 15px;
+background-color: #007BFF;
+color: #fff;
+border-radius: 50px;
+}
+        #backToTop {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            right: 30px;
+            z-index: 99;
+            border: none;
+            outline: none;
+            background-color: #555;
+            color: white;
+            cursor: pointer;
+            width: 10vh;  /* Imposta la larghezza */
+            height: 10vh; /* Imposta l'altezza */
+            border-radius: 50%; /* Rende il pulsante tondo */
+            display: flex; /* Utilizza flexbox per centrare il contenuto */
+            align-items: center; /* Centra verticalmente il contenuto */
+            justify-content: center; /* Centra orizzontalmente il contenuto */
+            font-size: 2vw; /* Dimensione del carattere proporzionale alla larghezza della finestra */
+        }
+        #backToTop:hover {
+            background-color: #000;
+        }
