--- a/iFioriDiTania/src/main/resources/templates/gatti.html
+++ b/iFioriDiTania/src/main/resources/templates/gatti.html
@@ -2,13 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Tutti i Gatti</title>
+    <link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>
-    <h1>Elenco di tutti i gatti</h1>
-    <ul>
-        <li th:each="gatto : ${tutti_gatti}">
-            <a th:href="@{/gatto/{id}(id=${gatto.id})}" th:text="${gatto.nome_gatto}"></a>
-        </li>
-    </ul>
+	<div th:replace="~{fragments/headernav :: headernav}"></div>
+    <div class= "contenitore-hero">
+   	 <h1>Elenco di tutti i gatti</h1>
+	    <ul>
+	        <li th:each="gatto : ${tutti_gatti}">
+	            <a th:href="@{/gatto/{id}(id=${gatto.id})}" th:text="${gatto.nome_gatto}"></a>
+	        </li>
+	    </ul>
+    </div> 
+    <div th:replace="fragments/backToTop :: backToTop"></div>
+    <div th:replace="~{fragments/footernav :: footernav}"></div>
 </body>
 </html>
