--- a/iFioriDiTania/src/main/resources/templates/gatti.html
+++ b/iFioriDiTania/src/main/resources/templates/gatti.html
@@ -14,7 +14,7 @@
 	        </li>
 	    </ul>
     </div> 
-    <div th:replace="fragments/backToTop :: backToTop"></div>
+	<div th:replace="~{fragments/backToTop :: backToTop}"></div>
     <div th:replace="~{fragments/footernav :: footernav}"></div>
 </body>
 </html>
