--- a/iFioriDiTania/src/main/resources/templates/gatto.html
+++ b/iFioriDiTania/src/main/resources/templates/gatto.html
@@ -15,7 +15,7 @@
 		           </li>
 		       </ul>
     </div>
-    <div th:replace="fragments/backToTop :: backToTop"></div>
+	<div th:replace="~{fragments/backToTop :: backToTop}"></div>
 
 </body>
 </html>
