--- a/iFioriDiTania/src/main/resources/templates/registrationSuccessful.html
+++ b/iFioriDiTania/src/main/resources/templates/registrationSuccessful.html
@@ -13,7 +13,7 @@
 		<h1>Congratulazioni ti sei registrato!</h1>
 
     </div>
-    <div th:replace="fragments/backToTop :: backToTop"></div>
+	<div th:replace="~{fragments/backToTop :: backToTop}"></div>
 </body>
 
 </html>
