--- a/iFioriDiTania/src/main/resources/templates/evento.html
+++ b/iFioriDiTania/src/main/resources/templates/evento.html
@@ -15,6 +15,6 @@
             </li>
         </ul>
     </div>
-    <div th:replace="fragments/backToTop :: backToTop"></div>
+	<div th:replace="~{fragments/backToTop :: backToTop}"></div>
 </body>
 </html>
