--- a/iFioriDiTania/src/main/resources/templates/userProfile.html
+++ b/iFioriDiTania/src/main/resources/templates/userProfile.html
@@ -43,7 +43,7 @@
             </div>
         </div>
     </div>
-    <div th:replace="fragments/backToTop :: backToTop"></div>
+	<div th:replace="~{fragments/backToTop :: backToTop}"></div>
 </body>
 
 </html>
