--- a/iFioriDiTania/src/main/resources/templates/utente.html
+++ b/iFioriDiTania/src/main/resources/templates/utente.html
@@ -10,6 +10,6 @@
         <h3>Foto</h3>
 
     </div>
-    <div th:replace="fragments/backToTop :: backToTop"></div>
+ 	<div th:replace="~{fragments/backToTop :: backToTop}"></div>
 </body>
 </html>
