gestione categorie fiori, 1.repo;2.service;3.controller

--- a/iFioriDiTania/src/main/resources/templates/admin/pagine_fiore_amministratore/PaginaAggiungiFiore.html
+++ b/iFioriDiTania/src/main/resources/templates/admin/pagine_fiore_amministratore/PaginaAggiungiFiore.html
@@ -14,6 +14,10 @@
             <label>Descrizione:</label>
             <textarea th:field="*{descrizione_fiore}"></textarea>
         </div>
+                <div>
+            <label>categoria:</label>
+            <textarea th:field="*{categoria_fiore}"></textarea>
+        </div>
         <div>
             <label>Archiviato:</label>
             <input type="checkbox" th:field="*{archiviato_fiore}" />
