--- a/iFioriDiTania/src/main/resources/templates/admin/pagine_accessorio_amministratore/PaginaAggiungiAccessorio.html
+++ b/iFioriDiTania/src/main/resources/templates/admin/pagine_accessorio_amministratore/PaginaAggiungiAccessorio.html
@@ -16,6 +16,10 @@
             <textarea th:field="*{descrizione_accessorio}"></textarea>
         </div>
         <div>
+            <label>categoria:</label>
+            <textarea th:field="*{categoria_accessorio}"></textarea>
+        </div>
+        <div>
             <label>Archiviato:</label>
             <input type="checkbox" th:field="*{archiviato_accessorio}" />
         </div>
