--- a/iFioriDiTania/src/main/resources/templates/fragments/headernav.html
+++ b/iFioriDiTania/src/main/resources/templates/fragments/headernav.html
@@ -18,7 +18,7 @@
 	    <div class="interaction">
 			<ul class="nav-links" id="nav-links">
 			    <li><a th:href="@{/fiori}">Fiori</a></li>
-			    <li><a th:href="@{/}">Piante</a></li>
+			    <li><a th:href="@{/piante}">Piante</a></li>
 			    <li><a th:href="@{/servizi}">Servizi</a></li>
 			    <li><a th:href="@{/accessori}">Accessori</a></li>
 			    <li><a th:href="@{/recensioni}">Recensioni</a></li>
