--- a/iFioriDiTania/src/main/resources/static/css/styles.css
+++ b/iFioriDiTania/src/main/resources/static/css/styles.css
@@ -161,7 +161,7 @@ a {
     font-family: 'SugarMagic',bold;
     font-weight: 400;
     font-size: 2em;
-    width: 400px;
+    width: 400;
     text-transform: capitalize;
 }
 span{
@@ -664,7 +664,7 @@ footer.footernav .interaction h5 {
 	/* Hero section styles */
 
     background-color: #f8f9fa;
-    height: 80vh;
+    min-height: 80vh;
     
     background-repeat: no-repeat;
     background-size: cover;
@@ -715,3 +715,107 @@ border-radius: 50px;
         #backToTop:hover {
             background-color: #000;
         }
+
+
+
+.box-categorie{
+	width: 80%;
+	height: 50vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	
+	
+}
+
+
+        
+.categoria-card{
+	background-size: cover; /* Assicurati che l'immagine di sfondo copra l'intero div */
+    background-position: center; /* Centra l'immagine di sfondo */
+    cursor: pointer; /* Cambia il cursore per indicare che è cliccabile */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 5vh;
+    margin-right: 5vh;
+   
+   
+    
+       
+}
+.categoria-card h2{
+	
+	color: white;
+	z-index:6 ;
+	text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.7); 
+	
+}
+.categoria-card a{
+	 background: rgba(0, 0, 0, 0.3); /* Sfondo scuro */
+	 position: absolute; 
+	 text-decoration: none;
+	 color: inherit;
+	 
+	 
+}
+.categoria-card a,
+.categoria-card{
+	border-radius: 15px; /* Bordo arrotondato */
+	width:30vh;
+	height:40vh;
+}
+
+.contenitore-di-categorie{
+	display: flex;justify-content: center;align-items: center
+}
+
+.fiore-card{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	align-content:center;
+	flex-direction: column;
+	box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
+	border-radius: 15px; /* Bordo arrotondato */
+	width:30vh;
+	height:40vh;
+	margin-left: 5vh;
+    margin-right: 5vh;
+    margin-bottom: 2vh;
+    margin-top: 2vh;
+    
+}
+.fiore-card a div img{
+	width: 100%;
+	height: 100%;
+	margin: 0;
+}
+
+.categoria-box{
+	display: flex;
+	justify-content: center;
+ 	flex-wrap: wrap;
+	flex-direction: row;
+	
+}
+.overlay {
+    
+	width:30vh;
+	height:40vh;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    z-index: 2;
+}
+.fiore-card:hover .overlay {
+    opacity: 1;
+}
+
