--- a/iFioriDiTania/src/main/resources/templates/piante.html
+++ b/iFioriDiTania/src/main/resources/templates/piante.html
@@ -1,31 +1,23 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Tutti i Fiori</title>
+    <title>Tutte Le Piante</title>
     <link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>
 	<div th:replace="~{fragments/headernav :: headernav}"></div>
-    <div class= "contenitore-hero">
-    <h1>Elenco di tutti i fiori</h1>
+    <div class= "contenitore-hero" style="min-height:40vh; ">
+    <h1>Elenco di Tutte Le Piante</h1>
 	
 
-	    <div class="box-categorie">
-			<div class="categoria-card" th:each="categoria : ${tutte_categorie_fiori}" th:href="'#' + ${categoria}" th:style="'background-image: url(\'/images/foto_fiori/foto_categorie/' + ${categoria} + '.jpg\');'">
-  				  <!-- Contenuto della div per la categoria -->
-  				 <a th:href="'#' + ${categoria}" ></a>
-   				 <h2 th:text="${categoria}"></h2>
-			</div>
 
-	    
-	    </div>
 	</div>
 	<div class="contenitore-di-categorie"  ><!-- Definisco larghezza -->
 	    <div style="width: 80%;"><!-- Definisco box interno con 80% larghezza -->
-	        <div th:each="categoria : ${tutte_categorie_fiori}"><!-- Uso le categorie -->
+	        
 	            <h3 th:id="${categoria}" th:text="${categoria}"></h3>
 	            <div class="categoria-box" >
-		            <div class="fiore-card"  th:each="fiore : ${tutti_fiori}" th:if="${fiore.categoria_fiore == categoria}"><!-- Prendo elementi fiore e confronto per fare una scrematura -->
+		            <div class="fiore-card"  th:each="fiore : ${tutte_piante}" ><!-- Prendo elementi fiore e confronto per fare una scrematura -->
 		                <!-- Contenuto per ogni fiore -->
 						<a th:href="@{/fiore/{fioreId}(fioreId=${fiore.id})}" >
 							<div>
@@ -38,7 +30,7 @@
 							</a>
 		            </div>
 	            </div>
-	        </div>            
+	                  
 	    </div>
 	</div>
 
