--- a/iFioriDiTania/src/main/resources/templates/fragments/footernav.html
+++ b/iFioriDiTania/src/main/resources/templates/fragments/footernav.html
@@ -16,13 +16,13 @@
             </div>
             <div class="interaction">
                 <ul class="nav-links" id="nav-links">
-                    <li><a href="@{/}">Fiori</a></li>
-                    <li><a href="@{/}">Piante</a></li>
-                    <li><a href="@{/}">Servizi</a></li>
-                    <li><a href="@{/}">Accessori</a></li>
-                    <li><a href="@{/}">Recensioni</a></li>
-                    <li><a th:href="@{/}">Chi Siamo</a></li>
-                    <li><a th:href="@{/}">Colonia Felina</a></li>
+			    <li><a th:href="@{/fiori}">Fiori</a></li>
+			    <li><a th:href="@{/piante}">Piante</a></li>
+			    <li><a th:href="@{/servizi}">Servizi</a></li>
+			    <li><a th:href="@{/accessori}">Accessori</a></li>
+			    
+			    <li><a th:href="@{/}">Chi Siamo</a></li>
+			    <li><a th:href="@{/gatti}">Colonia Felina</a></li>
                     <li><a th:href="@{/}">cookie policy</a></li>
                     <li><a th:href="@{/}">privacy</a></li>
                 </ul>
