--- a/iFioriDiTania/src/main/resources/templates/index.html
+++ b/iFioriDiTania/src/main/resources/templates/index.html
@@ -100,7 +100,7 @@
 	        <div class="flowers-slider swiper">
 	            <div class="swiper-wrapper">
 	                <div class="swiper-slide" th:each="fiore : ${tutti_fiori}">
-	                    <a th:href="@{/servizio/{id}(id=${fiore.id})}" class="card-link">
+	                    <a th:href="@{/fiore/{id}(id=${fiore.id})}" class="card-link">
 	                        <div class="card">
 	                            <div class="swiper-container">
 	                                <div class="swiper-wrapper">
